@@ -20,6 +20,8 @@
 	(wine git e169bb0a7f204ebe0f3053d824a1177bc1dedc65) and
 	for IDirect3DViewport3_GetViewport (wine git 
 		  7c8fa9c24f5d6d4e22dec148ffecefc9a4262a27)
+	* d3dtypes.h: Change long to LONG for Win64 compatibility.
+	(wine git 3d94f5efc29b43c72e9574ca6c7ee88a69e28b73)
 
 2009-02-20  Kai Tietz  <kai.tietz@onevision.com>
 
